--- a/CodilityLogin/Pages/Index.razor
+++ b/CodilityLogin/Pages/Index.razor
@@ -1,10 +1,10 @@
 ﻿@page "/"
-@inject NavigationManager NavManager
+@using System.Text.RegularExpressions;
 
 <div class="row justify-content-center">
     <div class="d-block">
         <h1>Login-ish</h1>
-    </div>    
+    </div>
 </div>
 <div class="row justify-content-center">
     <div class="alert @ClassNames">
@@ -15,9 +15,9 @@
     <form @onsubmit="OnSubmit" class="needs-validation" novalidate>
         <div class="form-row">
             <div class="form-group row">
-                <label for="username" class="col-3 col-form-label">Username</label>
+                <label for="email" class="col-3 col-form-label">Email</label>
                 <div class="col-9">
-                    <input class="form-control" type="text" id="username" @bind-value="UserName" required />
+                    <input class="form-control" type="text" id="email" @bind-value="Email" required />
                     <div class="invalid-feedback">
                         Invalid username/password
                     </div>
@@ -32,7 +32,7 @@
                     <div class="invalid-feedback">
                         Invalid username/password
                     </div>
-                </div>                
+                </div>
             </div>
         </div>
         <div class="form-row">
@@ -40,19 +40,19 @@
                 <button type="submit" class="btn-primary rounded btn-lg">Log In <span class="oi oi-chevron-right" aria-hidden="true"></span></button>
             </div>
         </div>
-    </form>    
+    </form>
 </div>
 
 @code{
     string ClassNames = "d-none";
     string alertText = "";
 
-    string UserName;
+    string Email;
     string Password;
 
     void OnSubmit()
     {
-        if(string.IsNullOrEmpty(UserName) || string.IsNullOrEmpty(Password))
+        if (string.IsNullOrEmpty(Email) || string.IsNullOrEmpty(Password))
         {
             ClassNames = "alert-danger";
             alertText = "Please provide both username and password";
@@ -60,7 +60,18 @@
             return;
         }
 
-        if (UserName != "Friend" || Password != "Test123")
+        if (!Regex.IsMatch(Email,
+                @"^(?("")("".+?(?<!\\)""@)|(([0-9a-z]((\.(?!\.))|[-!#\$%&'\*\+/=\?\^`\{\}\|~\w])*)(?<=[0-9a-z])@))" +
+                @"(?(\[)(\[(\d{1,3}\.){3}\d{1,3}\])|(([0-9a-z][-0-9a-z]*[0-9a-z]*\.)+[a-z0-9][\-a-z0-9]{0,22}[a-z0-9]))$",
+                RegexOptions.IgnoreCase, TimeSpan.FromMilliseconds(250)))
+        {
+            ClassNames = "alert-danger";
+            alertText = "Email is not in a valid format";
+            Password = string.Empty;
+            return;
+        }
+
+        if (Email != "interviewee@bjss.com" || Password != "Test123")
         {
             ClassNames = "alert-danger";
             alertText = "Invalid username/password";
