--- a/CodilityLogin/Pages/_Host.cshtml
+++ b/CodilityLogin/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@namespace LoginTest.Pages
+@namespace CodilityLogin.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = null;
