--- a/CodilityLogin/_Imports.razor
+++ b/CodilityLogin/_Imports.razor
@@ -5,5 +5,5 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using LoginTest
-@using LoginTest.Shared
+@using CodilityLogin
+@using CodilityLogin.Shared
