--- a/CodilityLogin/Pages/Index.razor
+++ b/CodilityLogin/Pages/Index.razor
@@ -1,5 +1,7 @@
 ﻿@page "/"
-@using System.Text.RegularExpressions;
+@using Interfaces;
+@using Models;
+@inject ILoginService  _loginService;
 
 <div class="row justify-content-center">
     <div class="d-block">
@@ -12,15 +14,12 @@
     </div>
 </div>
 <div class="row justify-content-center">
-    <form @onsubmit="OnSubmit" class="needs-validation" novalidate>
+    <form @onsubmit="OnSubmit" novalidate>
         <div class="form-row">
             <div class="form-group row">
                 <label for="email" class="col-3 col-form-label">Email</label>
                 <div class="col-9">
-                    <input class="form-control" type="text" id="email" @bind-value="Email" required />
-                    <div class="invalid-feedback">
-                        Invalid username/password
-                    </div>
+                    <input class="form-control" type="text" id="email" @bind-value="user.Email" required />
                 </div>
             </div>
         </div>
@@ -28,10 +27,7 @@
             <div class="form-group row">
                 <label for="password" class="col-3 col-form-label">Password</label>
                 <div class="col-9">
-                    <input class="form-control" id="password" @bind-value="Password" type="password" required />
-                    <div class="invalid-feedback">
-                        Invalid username/password
-                    </div>
+                    <input class="form-control" id="password" @bind-value="user.Password" type="password" required />
                 </div>
             </div>
         </div>
@@ -44,42 +40,17 @@
 </div>
 
 @code{
+    User user = new User();
     string ClassNames = "d-none";
     string alertText = "";
 
-    string Email;
-    string Password;
-
     void OnSubmit()
     {
-        if (string.IsNullOrEmpty(Email) || string.IsNullOrEmpty(Password))
-        {
-            ClassNames = "alert-danger";
-            alertText = "Please provide both username and password";
-            Password = string.Empty;
-            return;
-        }
+        var result = _loginService.CheckCredentials(user);
 
-        if (!Regex.IsMatch(Email,
-                @"^(?("")("".+?(?<!\\)""@)|(([0-9a-z]((\.(?!\.))|[-!#\$%&'\*\+/=\?\^`\{\}\|~\w])*)(?<=[0-9a-z])@))" +
-                @"(?(\[)(\[(\d{1,3}\.){3}\d{1,3}\])|(([0-9a-z][-0-9a-z]*[0-9a-z]*\.)+[a-z0-9][\-a-z0-9]{0,22}[a-z0-9]))$",
-                RegexOptions.IgnoreCase, TimeSpan.FromMilliseconds(250)))
-        {
-            ClassNames = "alert-danger";
-            alertText = "Email is not in a valid format";
-            Password = string.Empty;
-            return;
-        }
+        ClassNames = result.ClassNames;
+        alertText = result.AlertText;
 
-        if (Email != "interviewee@bjss.com" || Password != "Test123")
-        {
-            ClassNames = "alert-danger";
-            alertText = "Invalid username/password";
-            Password = string.Empty;
-            return;
-        }
-
-        ClassNames = "alert-success";
-        alertText = "Welcome to BJSS";
+        if (alertText.Contains("danger")) user.Password = string.Empty;
     }
 }
