--- a/CodilityLogin/Pages/Index.razor
+++ b/CodilityLogin/Pages/Index.razor
@@ -14,28 +14,20 @@
     </div>
 </div>
 <div class="row justify-content-center">
-    <form @onsubmit="OnSubmit" novalidate>
-        <div class="form-row">
-            <div class="form-group row">
-                <label for="email" class="col-3 col-form-label">Email</label>
-                <div class="col-9">
-                    <input class="form-control" type="text" id="email" @bind-value="user.Email" required />
-                </div>
-            </div>
+    <form @onsubmit="OnSubmit" novalidate>        
+        <div class="form-group row">
+            <label for="email" class="col-4">Email</label>                
+            <input class="form-control col-8" type="text" id="email" @bind-value="user.Email" required />                
+        </div>                
+        <div class="form-group row">
+            <label for="password" class="col-4">Password</label>                
+            <input class="form-control col-8" id="password" @bind-value="user.Password" type="password" required />
+                
         </div>
-        <div class="form-row">
-            <div class="form-group row">
-                <label for="password" class="col-3 col-form-label">Password</label>
-                <div class="col-9">
-                    <input class="form-control" id="password" @bind-value="user.Password" type="password" required />
-                </div>
-            </div>
+        <div class="form-group row justify-content-center">
+            <button type="submit" class="btn-primary rounded btn-lg">Log In <span class="oi oi-chevron-right" aria-hidden="true"></span></button>
         </div>
-        <div class="form-row">
-            <div class="form-group row">
-                <button type="submit" class="btn-primary rounded btn-lg">Log In <span class="oi oi-chevron-right" aria-hidden="true"></span></button>
-            </div>
-        </div>
+        
     </form>
 </div>
 
